修改格式，处理图片

--- a/project1/1.md
+++ b/project1/1.md
@@ -1,6 +1,8 @@
-#NLP 项目1
+# NLP 项目1
+
 ## Step-1 数据预处理
-####1. 维基百科中文语料库的处理
+####  1. 维基百科中文语料库的处理
+
 - 下载[维基百科中文语料数据库](https://ftp.acc.umu.se/mirror/wikimedia.org/dumps/zhwiki/20
 191120/zhwiki-20191120-pages-articles-multistream.xml.bz2)
 
@@ -8,7 +10,7 @@
 ```python
 python3 WikiExtractor.py -b 1024M -o extracted zhwiki-20191120-pages-articles-multistream.xml.bz2
 ```
-这里1024M指的是一个语料库文件的大小。此时，在extracted文件夹中，生成 wiki_00 和 wiki_01 两个文件。文件格式如下所示：
+这里 1024M 指的是一个语料库文件的大小。此时，在extracted文件夹中，生成 wiki_00 和 wiki_01 两个文件。文件格式如下所示：
 ```html
 <doc id="13" url="https://zh.wikipedia.org/wiki?curid=13" title="数学">
 数学
@@ -25,7 +27,7 @@ opencc -i wiki_01 -o zh_wiki_01 -c t2s.json
 ```
 这样，生成 zh_wiki_00 和 zh_wiki_01 两份简体中文语料库。
 
-- 使用正则表达式提取文章内容，利用 jieba 进行分词操作[1]
+- 使用正则表达式提取文章内容，利用 jieba 进行[分词操作](https://www.jianshu.com/p/e2d13d058ac6)
 ```python
 import re
 import jieba
@@ -96,7 +98,8 @@ def main():
 if __name__ == '__main__':
     main()
 ```
-####2. 汉语新闻语料库
+#### 2. 汉语新闻语料库
+
 - 下载[汉语新闻语料库]( https://github.com/Computing-Intelligence/datasource/blob/master/export_sql_1558435.zip)
 
 - 进行数据提取和分词操作
@@ -118,8 +121,9 @@ with open('/home/kuan/Desktop/NLP/project1/data','w+',encoding='utf-8') as file:
         file.write(article_contents + "\n")
 ```
 
-####3. 合并处理好的文件
-处理好的文件保存在 data_result 中
+#### 3. 合并处理好的文件
+将处理好的文件保存在 data_result 中。
+
 ```python
 import os
 input_names = ['zh_wiki_parsed_00', 'zh_wiki_parsed_01', 'data']
@@ -136,7 +140,8 @@ for input_name in input_names:
     input.close()
 output.close()
 ```
-###4. 使用Gensim训练词向量
+#### 4. 使用Gensim训练词向量
+
 ```python
 from gensim.models import word2vec
 import multiprocessing
@@ -153,7 +158,8 @@ model = gensim.models.Word2Vec.load('/home/kuan/Desktop/NLP/project1/wiki.model'
 ```
 采用以上 load 方法可载入已经训练好的模型。
 
-###5. 词向量的测试效果
+#### 5. 词向量的测试效果
+
 - 词向量的语义相似性
 
 输入：
@@ -194,7 +200,6 @@ model.wv.most_similar('人工智能')
 ```
 
 - 词向量的语义线性关系
-dd
 ```python
 def analogy(x1, x2, y1):
     result = model.wv.most_similar(positive=[x2, y1], negative=[x1])
@@ -209,7 +214,7 @@ def analogy(x1, x2, y1):
 输出：```'火车站'```
 
 - 词向量的可视化
-设置matplotlib支持中文字体[2]，然后使用 [t-SNE]( https://www.kaggle.com/jeffd23/visualizing-word-vectors-with-t-s) 进行高位向量的可视化。这里选取了500个词组进行可视化操作。
+设置 matplotlib [支持中文字体](https://blog.csdn.net/DicserYan2518/article/details/84501315)，然后使用 [t-SNE]( https://www.kaggle.com/jeffd23/visualizing-word-vectors-with-t-s) 进行高位向量的可视化。这里选取了500个词组进行可视化操作。
 ```python
 from sklearn.manifold import TSNE
 import matplotlib.pyplot as plt
@@ -241,11 +246,5 @@ def tsne_plot(model):
     plt.show()
 ```
 得到的图像如下所示:
-![](/home/kuan/Desktop/NLP/project1/t-SNE.png)
+![t-SNE](/home/kuan/kkb_nlp/project1/img/t-SNE.png)
 
-
-####参考文章
-[1][使用gensim训练维基百科中文语料wordvec模型
-](https://www.jianshu.com/p/e2d13d058ac6)
-[2][Ubuntu16.04安装中文字体SimHei
-](https://blog.csdn.net/DicserYan2518/article/details/84501315)
