--- a/project1/2.md
+++ b/project1/2.md
@@ -1,4 +1,5 @@
-#NLP 项目1
+# NLP 项目1
+
 ## Step-2 核心模型的搭建
 ### 1. 句子的 SIF 向量化
 基于单词的向量化，使用普林斯顿大学提出来的 [SIF方法](https://openreview.net/pdf?id=SyK00v5xx)，进行句子的向量化。
@@ -96,6 +97,8 @@ def sentence2vec(sentence, embedding_size, a):
     sv = np.subtract(sentence_vector, uuTv)
     return sv
 ```
+
+### 2. 根据句子向量，为每个句子赋予权值，并获取相似度
 
 - 定义 gen_vector 函数，根据文章的标题和内容，生成标题向量、句子向量列表，和文章内容向量。
 
@@ -213,7 +216,7 @@ def knn_smooth(sv, n_neighbors):
           return np.argsort(-np.array(sim_list))[:n]
   ```
 
-- 获得end-to-end模型
+### 3. 获得 end-to-end 模型
 
 把之前的步骤合并起来，构造一个 gen_text(title, article, n_top=N) 函数。这个函数输入文章的标题和内容，然后输出是一个string，这个string是和文章意义最相关的N个句子，我们作为摘要输出内容即可。
 
