修改图片显示

--- a/project1/1.md
+++ b/project1/1.md
@@ -213,8 +213,9 @@ def analogy(x1, x2, y1):
 
 输出：```'火车站'```
 
-- 词向量的可视化
-设置 matplotlib [支持中文字体](https://blog.csdn.net/DicserYan2518/article/details/84501315)，然后使用 [t-SNE]( https://www.kaggle.com/jeffd23/visualizing-word-vectors-with-t-s) 进行高位向量的可视化。这里选取了500个词组进行可视化操作。
+- 词向量的可视化。
+
+  设置 matplotlib [支持中文字体](https://blog.csdn.net/DicserYan2518/article/details/84501315)，然后使用 [t-SNE]( https://www.kaggle.com/jeffd23/visualizing-word-vectors-with-t-s) 进行高位向量的可视化。这里选取了500个词组进行可视化操作。
 ```python
 from sklearn.manifold import TSNE
 import matplotlib.pyplot as plt
@@ -246,5 +247,4 @@ def tsne_plot(model):
     plt.show()
 ```
 得到的图像如下所示:
-![t-SNE](/home/kuan/kkb_nlp/project1/img/t-SNE.png)
-
+![t-SNE](img/t-SNE.png)
