--- a/project1/2.md
+++ b/project1/2.md
@@ -55,7 +55,7 @@ def get_word_frequency(word):
 
 - SIF模型的实现
 
-![SIF](/home/kuan/Desktop/NLP/project1/img/SIF.png)
+![SIF](img/SIF.png)
 
 利用SIF模型，生成句子向量。输入是句子 sentece，向量长度 embedding_size，以及超参数 a 。输出为长度为 embedding_size 的句子向量。
 
