add source code

--- a/project1/2.md
+++ b/project1/2.md
@@ -181,7 +181,7 @@ def cos_sim(v1, v2):
 import numpy as np
 def knn_smooth(sv, n_neighbors):
     sv_smooth = []
-    if n_neighbors *2 + 1 > len(sv):
+    if n_neighbors * 2 + 1 > len(sv):
         return sv
     for (i, v) in enumerate(sv):
         if i < n_neighbors:
@@ -189,19 +189,19 @@ def knn_smooth(sv, n_neighbors):
         elif i + n_neighbors > len(sv):
             sv_smooth.append(np.mean(sv[i - n_neighbors:],axis=0))
         else:
-            sv_smooth.append(np.mean(sv[i - n_neighbors:i + n_neighbors + 1],axis=0))
+            sv_smooth.append(np.mean(sv[i - n_neighbors:i + n_neighbors + 1], axis=0))
     return sv_smooth
 ```
 
 - 根据句子向量以及句子向量之间的相似度，得到每个句子与标题以及文章内容之间的相似程度。然后对句子的相似程度进行排序，获得最相关的 n 个句子。
 
   ```python
-  #输入：title向量，sentence向量，content向量，alpha权重
+  #输入：title向量，sentence向量，content向量，alpha权重, n_neighbor每侧的邻居个数
   #输出：0~1的值列表，表示每个句子向量与content以及title的相似程度。
-  def correlation(title, sentence, content, alpha):
+  def correlation(title, sentence, content, alpha, n_neighbors=2):
       #参数alpha表示title与句子相似度的贡献程度，1-alpha表示content与句子相似度的贡献程度
       results = []
-      sentence_smooth = knn_smooth(sentence, n_neighbors=1)
+      sentence_smooth = knn_smooth(sentence, n_neighbors=2)
       for s in sentence_smooth:
           corr = alpha * cos_sim(s, title) + (1 - alpha) * cos_sim(s, content)
           results.append(corr)
@@ -223,7 +223,7 @@ def knn_smooth(sv, n_neighbors):
 ```python
 def gen_text(title, article, n_top=2):
     title_sv, sv, article_sv, original_sentences = gen_vector(title, article)
-    sim_list = correlation(title_sv, sv, article_sv, alpha=0.2)
+    sim_list = correlation(title_sv, sv, article_sv, alpha=0.2， n_neighbors=2)
     n_list = top_n(sim_list, n_top)
     output = ''
     for i in sorted(n_list):
